--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,11 @@
+.container{
+    @media screen and (min-width: 768px) {
+         width: 768px;     
+    }
+    @media screen and (min-width: 1200px) {
+        width: 1200px;    
+    }
+}
 .footer{
     background-color: #FFF5F6;
     padding-bottom: 3px;
@@ -14,15 +22,8 @@
     display: flex;
 }
 
-.footer_text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #907E82;
-}
 
+   
 .footer-list{
     margin: 0;
     width: 232px;
@@ -31,25 +32,53 @@
 
 .footer_text_small{
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.14;
     text-transform: uppercase;
     color: #FFA5BA;
     padding-bottom: 16px;
+    @media screen and (min-width: 768px) {
+        font-size: 26px;
+        line-height: 1.15;
+        letter-spacing: 0.04em;
+        padding-bottom: 12px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 1.13;
+        padding-bottom: 16px;
+    }
 }
 
 .footer_text_big{
     font-size: 34px;
-    line-height: 39px;
+    line-height: 1.16;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #D41443;
     padding-bottom: 40px;
+    @media screen and (min-width: 768px) {
+        font-size: 48px;
+        line-height: 1.15;
+        letter-spacing: 0.06em;
+       
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 58px;
+        line-height: 1.13;
+        padding-bottom: 60px;
+    }
 }
 
 .footer_contact{
     text-align: end;
     flex-direction: column;
     padding-bottom: 40px;
+    @media screen and (min-width: 768px) {
+        padding-bottom: 59px;     
+    }
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 60px;
+    }
 }
 
 .footer-soc-list{
@@ -69,10 +98,25 @@
     fill: #FFFFFF;
     background: #FEA5BB;;
     transition: background-color  #D41443  cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 768px) {
+        
+        width: 34px;
+        height: 34px;
+    }
+    @media screen and (min-width: 1200px) {
+        
+    }
 }
 
 .footer_soc_item:not(:last-child) {
-    margin-right: 20px;
+    margin-right: 28.24px;
+    @media screen and (min-width: 768px) {
+        margin-right: 20px;        
+    }
+    @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+    }
+
 }
 
 .footer_soc_item:hover,
@@ -84,30 +128,55 @@
 
 .tel-text{
     font-weight: 700;
-    font-size: 12px;
-    line-height: 186%;
+    font-size: 13px;
+    line-height: 1.86;
     text-align: right;
     color: #000000;
     //padding-bottom: 40px;
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+        line-height: 1.85;       
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+        line-height: 1.86;  
+        letter-spacing: 0.02em;  
+    }
 }
 .tel-num{
     font-weight: 700;
-    font-size: 13px;
-    line-height: 186%;
+    font-size: 12px;
+    line-height: 1.24;
     text-align: right;
     color: #D41443;
     //padding-bottom: 40px;
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+        line-height: 1.86;       
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+        letter-spacing: 0.02em;  
+    }
 }
 .footer-title_end{
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.52%;
+    line-height: 1.5;
     text-align: center;
     color: #907E82;
     padding-top: 16px;
+    @media screen and (min-width: 768px) {
+        line-height: 1.86;    
+        letter-spacing: 0.02em;   
+    }
+    @media screen and (min-width: 1200px) {
+        letter-spacing: 0.02em;  
+    }
+}
     
 
-}
+
 .end{
     margin: 0;
 }
