--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ html {
 }
 
 .container {
-  width: 480px;
+  width: auto;
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
@@ -156,19 +156,6 @@ html {
   fill: var(--main-btn-color);
 }
 
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-    height: 262px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-    height: 213px;
-  }
-}
-
 .footer {
   background-color: #FFF5F6;
   padding-bottom: 3px;
@@ -182,6 +169,13 @@ html {
 .footer_text {
   flex-direction: column;
   display: flex;
+  color: #D41443;
+  padding-bottom: 40px;
+}
+@media screen and (min-width: 1200px) {
+  .footer_text {
+    padding-bottom: 60px;
+  }
 }
 
 .footer-list {
@@ -218,8 +212,8 @@ html {
   line-height: 1.16;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #D41443;
-  padding-bottom: 40px;
+  width: 200px;
+  height: 76px;
 }
 @media screen and (min-width: 768px) {
   .footer_text_big {
@@ -228,11 +222,13 @@ html {
     letter-spacing: 0.06em;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1199px) {
   .footer_text_big {
     font-size: 58px;
     line-height: 1.13;
     padding-bottom: 60px;
+    width: 474px;
+    height: 66px;
   }
 }
 
@@ -337,6 +333,10 @@ html {
   }
 }
 
+.end {
+  margin: 0;
+}
+
 .footer-title_end {
   font-weight: 700;
   font-size: 14px;
@@ -344,19 +344,23 @@ html {
   text-align: center;
   color: #907E82;
   padding-top: 16px;
+  width: 150px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (min-width: 768px) {
   .footer-title_end {
     line-height: 1.86;
     letter-spacing: 0.02em;
+    padding-top: 8px;
+    width: auto;
+    height: 26px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer-title_end {
     letter-spacing: 0.02em;
+    padding-top: 7px;
   }
-}
-
-.end {
-  margin: 0;
 }/*# sourceMappingURL=main.css.map */
