--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,13 +1,4 @@
-.container{
-    @media screen and (min-width: 768px) {
-         width: 768px;   
-         height: 262px;  
-    }
-    @media screen and (min-width: 1200px) {
-        width: 1200px;  
-        height: 213px;  
-    }
-}
+
 .footer{
     background-color: #FFF5F6;
     padding-bottom: 3px;
@@ -22,9 +13,13 @@
 .footer_text {
     flex-direction: column;
     display: flex;
+    color: #D41443;
+    padding-bottom: 40px;
+   
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 60px;
+    }
 }
-
-
    
 .footer-list{
     margin: 0;
@@ -56,18 +51,22 @@
     line-height: 1.16;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #D41443;
-    padding-bottom: 40px;
+  
+    width: 200px;
+    height: 76px;
     @media screen and (min-width: 768px) {
         font-size: 48px;
         line-height: 1.15;
         letter-spacing: 0.06em;
        
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1199px) {
         font-size: 58px;
         line-height: 1.13;
         padding-bottom: 60px;
+        width: 474px;
+        height: 66px;
+        
     }
 }
 
@@ -161,6 +160,10 @@
         letter-spacing: 0.02em;  
     }
 }
+.end{
+    margin: 0;   
+}
+
 .footer-title_end{
     font-weight: 700;
     font-size: 14px;
@@ -168,18 +171,25 @@
     text-align: center;
     color: #907E82;
     padding-top: 16px;
+    width: 150px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  
     @media screen and (min-width: 768px) {
         line-height: 1.86;    
-        letter-spacing: 0.02em;   
+        letter-spacing: 0.02em; 
+        padding-top: 8px;
+        width: auto;
+        height: 26px;  
     }
     @media screen and (min-width: 1200px) {
         letter-spacing: 0.02em;  
+        padding-top: 7px;
     }
 }
     
 
 
-.end{
-    margin: 0;
-}
+
 
