--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -76,7 +76,8 @@ html {
 }
 
 .container{
-    width: 480px;
+    //width: 480px;
+    width: auto;
     margin: 0 auto;
     margin-left: auto;
     margin-right: auto;
