--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -9,6 +9,19 @@
     display: flex;
     flex-direction: column;
 }
+.footer_bloc{
+
+    @media screen and (min-width: 780px) {
+        display: flex;
+        flex-direction: row;
+        
+        @media screen and (min-width: 1200px) {
+            padding-bottom: 60px;
+        }
+    }
+
+   
+}
 
 .footer_text {
     flex-direction: column;
@@ -16,9 +29,7 @@
     color: #D41443;
     padding-bottom: 40px;
    
-    @media screen and (min-width: 1200px) {
-        padding-bottom: 60px;
-    }
+   
 }
    
 .footer-list{
@@ -53,7 +64,7 @@
     text-transform: uppercase;
   
     width: 200px;
-    height: 76px;
+    height: auto;
     @media screen and (min-width: 768px) {
         font-size: 48px;
         line-height: 1.15;
@@ -65,7 +76,7 @@
         line-height: 1.13;
         padding-bottom: 60px;
         width: 474px;
-        height: 66px;
+        height: auto;
         
     }
 }
@@ -75,10 +86,14 @@
     flex-direction: column;
     padding-bottom: 40px;
     @media screen and (min-width: 768px) {
-        padding-bottom: 59px;     
+        padding-top: 40px;
+        padding-bottom: 59px;   
+        padding-left: 128px;
+
     }
     @media screen and (min-width: 1200px) {
-        padding-bottom: 60px;
+       padding-left: 375px;
+        padding-bottom: 59px;
     }
 }
 
